compiler/zrc_codegen/src/expr/snapshots/zrc_codegen__expr__logic__tests__pointer_equality_operators_generate.snap
---
source: compiler/zrc_codegen/src/expr/logic.rs
description: "fn get_ptr() -> *i32;\n\nfn test() {\n    let a = get_ptr();\n    let b = get_ptr();\n\n    // TEST: should create pointer comparison using ptrtoint + icmp\n    let eq = a == b;\n\n    // TEST: should create pointer comparison using ptrtoint + icmp\n    let ne = a != b;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

declare ptr @get_ptr()

define {} @test() !dbg !3 {
entry:
  %let_ne = alloca i1, align 1
  %let_eq = alloca i1, align 1
  %let_b = alloca ptr, align 8
  %let_a = alloca ptr, align 8
  %call = call ptr @get_ptr(), !dbg !8
  store ptr %call, ptr %let_a, align 8, !dbg !11
  %call1 = call ptr @get_ptr(), !dbg !12
  store ptr %call1, ptr %let_b, align 8, !dbg !13
  %load = load ptr, ptr %let_a, align 8, !dbg !14
  %load2 = load ptr, ptr %let_b, align 8, !dbg !15
  %ptr_to_int = ptrtoint ptr %load to i64, !dbg !15
  %ptr_to_int3 = ptrtoint ptr %load2 to i64, !dbg !15
  %cmp = icmp eq i64 %ptr_to_int, %ptr_to_int3, !dbg !15
  store i1 %cmp, ptr %let_eq, align 1, !dbg !16
  %load4 = load ptr, ptr %let_a, align 8, !dbg !17
  %load5 = load ptr, ptr %let_b, align 8, !dbg !18
  %ptr_to_int6 = ptrtoint ptr %load4 to i64, !dbg !18
  %ptr_to_int7 = ptrtoint ptr %load5 to i64, !dbg !18
  %cmp8 = icmp ne i64 %ptr_to_int6, %ptr_to_int7, !dbg !18
  store i1 %cmp8, ptr %let_ne, align 1, !dbg !19
  ret {} zeroinitializer, !dbg !20
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 3, type: !4, scopeLine: 3, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !DILocation(line: 4, column: 13, scope: !9)
!9 = distinct !DILexicalBlock(scope: !10, file: !2, line: 3, column: 11)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 3, column: 11)
!11 = !DILocation(line: 4, column: 9, scope: !9)
!12 = !DILocation(line: 5, column: 13, scope: !9)
!13 = !DILocation(line: 5, column: 9, scope: !9)
!14 = !DILocation(line: 8, column: 14, scope: !9)
!15 = !DILocation(line: 8, column: 19, scope: !9)
!16 = !DILocation(line: 8, column: 9, scope: !9)
!17 = !DILocation(line: 11, column: 14, scope: !9)
!18 = !DILocation(line: 11, column: 19, scope: !9)
!19 = !DILocation(line: 11, column: 9, scope: !9)
!20 = !DILocation(line: 12, column: 1, scope: !9)
